# pycord

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG-V3.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE  MANIFEST.in  README.ja.rst  README.rst  RELEASE_SCHEDULE.md  about.md  bot.py  codecov.yml  config.yaml.tmpl  count_sourcelines.py  crowdin.yml  ext.py  ext2.py  getWool.py  intro_typing.py  lol.py  main.py  mypy.ini  ok.py  pyproject.toml  randomartmatt.txt  renovate.json  requirements-dev.txt  requirements.txt  secret.py  setup.py  test.md  test.py  (+3 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_CERTIFICATE_OF_ORIGIN.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  vulnerability_report.yml
.github/workflows/: .cleanup-todo  bandit.yml  bypass-review.yml  check.yml  codeql-analysis.yml  codeql.yml  codespell.yml  docs-checks.yml  docs-json-export.yml  docs-localization-download.yml  docs-localization-upload.yml  docs.yml  enforce-pr-template.yml  flake8.yml  fork_sync.yml  format.yml  lib-checks.yml  lint.yaml  lint.yml  lint_python.yml  mypy.yml  pr-auto-approve.yml  pr-checks.yml  pr-deps.yml  pr.yml  pr_deps.yml  pylint.yml  pytest.yml  python-app.yml  readthedocs-localization.yml  readthedocs.yml  release.yml  sync-guild-features.yml  test-pypi-token.yml  test.yml  todo-checks.yml  todo.yml  version-updates.yml
discord/: __init__.py  __main__.py  __version.py  _cooldowns.py  _typed_dict.py  _version.py  _voice_aliases.py  abc.py  activity.py  appinfo.py  application_role_connection.py  asset.py  audit_logs.py  automod.py  backoff.py  banner.txt  banners.py  bot.py  channel.py  client.py  cog.py  collectibles.py  colour.py  commands.py  components.py  constants.py  context_managers.py  discovery.py  embeds.py  emoji.py  emojis.json  enums.py  errors.py  file.py  flags.py  forum_tag.py  gateway.py  guild.py  guild_builder.py  guild_events.py  (+44 more)
discord/app/: __init__.py  _types.py  commands.py  context.py  errors.py
discord/chan/: ART.txt  __init__.py
discord/commands/: __init__.py  _types.py  commands.py  context.py  cooldowns.py  core.py  errors.py  invokable.py  mixins.py  options.py  permissions.py
discord/ext/: __init__.py
discord/models/: README.md  __init__.py  emoji.py  role.py  sticker.py  user.py
discord/sinks/: __init__.py  core.py  enums.py  errors.py  m4a.py  mka.py  mkv.py  mp3.py  mp4.py  ogg.py  pcm.py  wave.py
discord/types/: __init__.py  activity.py  appinfo.py  application_command.py  application_role_connection.py  audit_log.py  automod.py  card.py  channel.py  collectibles.py  components.py  discovery.py  embed.py  emoji.py  gateway.py  guild.py  guild_events.py  integration.py  interactions.py  invite.py  member.py  message.py  monetization.py  onboarding.py  poll.py  primary_guild.py  raw_models.py  role.py  scheduled_events.py  shared_client_theme.py  snowflake.py  soundboard.py  sticker.py  team.py  template.py  threads.py  user.py  voice.py  webhook.py  welcome_screen.py  (+1 more)
discord/ui/: __init__.py  action_row.py  button.py  checkbox.py  checkbox_group.py  constant.py  container.py  core.py  designer_view.py  file.py  file_upload.py  input_text.py  item.py  label.py  media_gallery.py  modal.py  radio_group.py  section.py  select.py  separator.py  text_display.py  thumbnail.py  view.py
discord/utils/: __init__.py  private.py  public.py
discord/voice/: __init__.py  _types.py  client.py  enums.py  errors.py  flags.py  gateway.py  recorder.py  state.py
discord/webhook/: __init__.py  async_.py  sync.py
docs/: DAVE_VOICE_RECEIVE.md  Makefile  api.rst  application_commands.rst  changelog.md  cogs.rst  conf.py  discord.rst  faq.rst  index.rst  installing.rst  intents.rst  intro.rst  logging.rst  make.bat  migrating.rst  migrating_to_async.rst  migrating_to_v1.rst  migrating_to_v2.rst  old_changelog.rst  quickstart.rst  version_guarantees.rst  whats_new.rst
docs/_static/: codeblocks.css  (+7 more)
endocs/: make.bat
examples/: Info.py  activity.py  audio_recording.py  audio_recording_merged.py  background_task.py  background_task_asyncio.py  basic_async_bot.py  basic_bot.py  basic_voice.py  bridge_bot.py  bridge_commands.py  cogs.py  command_error.py  community_invites.py  converters.py  cooldown.py  create_private_emoji.py  custom_context.py  dave_voice_test_bot.py  deleted.py  edits.py  guessing_game.py  invite_target_users.py  modal_dialogs.py  music_bot_with_slash_commands.py  new_member.py  reaction_roles.py  reply.py  secret.py  slowmode.py  soundboard.py  timeout.py  timestamp.py  token_storage.py  vc_audio_recording.py  voice_message_waveform.py  wait_for_event.py
pycord/: __init__.py  __main__.py  _version.py  abc.py  appinfo.py  application_role_connection.py  backoff.py  bot.py  channel.py  cog.py  colour.py  components.py  context_managers.py  embeds.py  emoji.py  enums.py  errors.py  flags.py  gateway.py  guild.py  guild_events.py  invite.py  iterators.py  member.py  mixins.py  object.py  oggparse.py  onboarding.py  opus.py  poll.py  raw_models.py  role.py  scheduled_events.py  stage_instance.py  sticker.py  template.py  threads.py  user.py  utils.py  widget.py
requirements/: _.txt  _locale.txt  _release.txt  all.txt  dev.txt  docs.txt  speed.txt  test.txt  voice.txt
rudocs/: logging.rst
scripts/: count_sourcelines.py  discord_release_notification.py  docs_json_exporter.py  manage_rtd_version.py  notify_discord.py  release_changelog.py  release_rtd_versions.py  trigger_rtd_localizations.py  update_changelog.py
test_exts/: options_showcase.py
tests/: .env  Makefile  README.md  __init__.py  client_test.py  core.py  helpers.py  import.py  middlewareplugin.py  parsing.py  pycord-cert.pem  pycord-key.pem  pycord-signkey.pem  requirements.txt  test_command_syncing.py  test_commands.py  test_dummy.py  test_enums.py  test_import.py  test_main.py  test_slash_command_options.py  test_typing_annotated.py  test_utils.py  tests.py
(+739 files in other folders)
