[build-system]
requires = [
    "setuptools>=80.10,<=80.10.2",
    "setuptools-scm>=9.2,<=9.2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "py-cord"
authors = [
    {name = "Pycord Development"}
]
description = "A Python wrapper for the Discord API"
readme = {content-type = "text/x-rst", file = "README.rst"}
requires-python = ">=3.10, <3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pycord.dev"
Changelog = "https://docs.pycord.dev/en/master/changelog.html"
Source = "https://github.com/Pycord-Development/pycord"
Documentation = "https://docs.pycord.dev"
Tracker = "https://github.com/Pycord-Development/pycord/issues"
Funding = "https://patreon.com/pycord"

[tool.setuptools]
packages = [
    "discord",
    "discord.types",
    "discord.sinks",
    "discord.ui",
    "discord.webhook",
    "discord.commands",
    "discord.ext.commands",
    "discord.ext.tasks",
    "discord.ext.pages",
    "discord.ext.bridge",
    "discord.bin",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements/_.txt"}
readme = {content-type = "text/x-rst", file = "README.rst"}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = "requirements/docs.txt"}
speed = {file = "requirements/speed.txt"}
voice = {file = "requirements/voice.txt"}

[tool.setuptools_scm]

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages = true
install_types = true
strict = true
show_error_codes = true
#allow_untyped_decorators = true
#allow_untyped_calls = true
ignore_errors = true

[tool.pylint.main]
extension-pkg-whitelist = [
    "pydantic",
    "ujson"
]
py-version = 3.10

[tool.pylint.messages_control]
enable = [
    "bad-indentation",
    "line-too-long"
]
disable = [
    "protected-access",
    "fixme"
]

[tool.pylint.format]
indent-string = '    '
max-line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
