[build-system]
requires = [
    "setuptools>=77.0.3,<=80.9.0",
    "setuptools-scm>=9.2,<=9.2.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "py-cord"
authors = [
    { name = "Pycord Development" }
]
description = "A Python wrapper for the Discord API"
readme = { content-type = "text/x-rst", file = "README.rst" }
requires-python = ">=3.10, <3.14"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://pycord.dev"
Changelog = "https://docs.pycord.dev/en/master/changelog.html"
Source = "https://github.com/Pycord-Development/pycord"
Documentation = "https://docs.pycord.dev"
Tracker = "https://github.com/Pycord-Development/pycord/issues"
Funding = "https://patreon.com/pycord"

[tool.setuptools]
packages = [
    "discord",
    "discord.types",
    "discord.sinks",
    "discord.ui",
    "discord.webhook",
    "discord.commands",
    "discord.ext.commands",
    "discord.ext.tasks",
    "discord.ext.pages",
    "discord.ext.bridge",
    "discord.bin",
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/_.txt" }
readme = { content-type = "text/x-rst", file = "README.rst" }

[tool.setuptools.dynamic.optional-dependencies]
docs = { file = "requirements/docs.txt" }
speed = { file = "requirements/speed.txt" }
voice = { file = "requirements/voice.txt" }

[dependency-groups]
dev = [
    "pylint~=3.3.8",
    "mypy~=1.19.1",
    "coverage~=7.10",
    "pre-commit==4.5.1",
    "codespell==2.4.1",
    "bandit==1.9.3",
    "flake8==7.3.0",
    "tox>=4.27.0",
    "tox-gh>=1.5.0"
]
test = [
    "pytest~=9.0.1",
    "pytest-asyncio~=1.3.0",
]
[tool.setuptools_scm]

[tool.black]
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"

[tool.mypy]
namespace_packages = true
install_types = true
strict = true
show_error_codes = true
#allow_untyped_decorators = true
#allow_untyped_calls = true
ignore_errors = true

[tool.pylint.main]
extension-pkg-whitelist = [
    "pydantic",
    "ujson"
]
py-version = 3.10

[tool.pylint.messages_control]
enable = [
    "bad-indentation",
    "line-too-long"
]
disable = [
    "protected-access",
    "fixme"
]

[tool.pylint.format]
indent-string = '    '
max-line-length = 120

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "run unit tests"
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
dependency_groups = ["test"]

# GitHub actions
[tool.tox.gh.python]
"3.13" = ["3.13"]
"3.12" = ["3.12"]
"3.11" = ["3.11"]
"3.10" = ["3.10"]
